fix: update layout by adjusting gap in main section and removing unnecessary div in tools tab

--- a/packages/wp-plugin/ionos-essentials/inc/dashboard/dashboard.css
+++ b/packages/wp-plugin/ionos-essentials/inc/dashboard/dashboard.css
@@ -96,7 +96,7 @@ main{
     background-image: url('assets/security/none.svg');
     background-repeat: no-repeat;
     background-position: top right;
-    min-height: 150px;
+    gap: 18px;
   }
 
   .bubble{
